auto/k3s/redis/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - port: 6379         # Port for internal cluster communication (other pods connect to this)
    targetPort: 6379   # Port on the Redis pod that is receiving traffic
    nodePort: 30037
    protocol: TCP
    name: redis
  selector:
    app: redis
